--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@babel/core": "7.0.0-beta.44",
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.44",
     "@babel/plugin-proposal-decorators": "7.0.0-beta.44",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-do-expressions": "7.0.0-beta.44",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.44",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.44",
     "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.44",
@@ -100,14 +100,13 @@
     "apollo-link": "1.2.1",
     "apollo-link-context": "1.0.7",
     "apollo-link-error": "1.0.7",
-    "awaity": "^1.0.0",
+    "awaity": "1.0.0",
     "classnames": "2.2.5",
     "date-fns": "2.0.0-alpha.7",
     "graphql": "0.13.2",
     "localforage": "1.7.1",
     "lodash": "4.17.5",
-    "lodash-decorators": "^5.0.0",
-    "mobx": "4.1.1",
+    "lodash-decorators": "5.0.0",
     "mobx-preact": "2.0.0",
     "mobx-state-tree": "2.0.3",
     "nanoid": "1.0.2",
