--- a/package.json
+++ b/package.json
@@ -41,14 +41,14 @@
     "@babel/preset-env": "7.0.0-beta.44",
     "@babel/preset-react": "7.0.0-beta.44",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "8.2.0",
+    "autoprefixer": "8.3.0",
     "ava": "0.25.0",
     "babel-eslint": "8.2.3",
     "babel-loader": "8.0.0-beta.2",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "caniuse-lite": "1.0.30000828",
+    "caniuse-lite": "1.0.30000830",
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
     "eslint": "4.19.1",
@@ -59,7 +59,7 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.7.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "graphql-tag": "2.8.0",
+    "graphql-tag": "2.9.1",
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
@@ -73,7 +73,7 @@
     "postcss-flexbugs-fixes": "3.3.0",
     "postcss-font-magician": "2.1.1",
     "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.3",
+    "postcss-loader": "2.1.4",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "4.0.0",
     "postcss-simple-vars": "4.1.0",
@@ -81,14 +81,14 @@
     "preact-compat-enzyme": "0.2.5",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
-    "style-loader": "0.20.3",
+    "style-loader": "0.21.0",
     "stylelint": "9.2.0",
     "stylelint-config-recommended": "2.1.0",
     "sugarss": "1.0.1",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
-    "webpack": "4.5.0",
-    "webpack-cli": "2.0.14",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15",
     "webpack-dev-server": "3.1.3"
   },
   "dependencies": {
@@ -105,11 +105,13 @@
     "classnames": "2.2.5",
     "date-fns": "2.0.0-alpha.7",
     "graphql": "0.13.2",
+    "halogen": "^0.2.0",
     "localforage": "1.7.1",
     "lodash": "4.17.5",
     "lodash-decorators": "5.0.0",
+    "mobx": "^4.2.0",
     "mobx-preact": "2.0.0",
-    "mobx-state-tree": "2.0.3",
+    "mobx-state-tree": "2.0.4",
     "ms": "^2.1.1",
     "nanoid": "1.0.2",
     "normalize.css": "8.0.0",
@@ -119,6 +121,7 @@
     "preact-compat": "3.18.0",
     "prop-types": "15.6.1",
     "react-helmet": "5.2.0",
+    "react-lazy-images": "^0.9.0",
     "react-loadable": "5.3.1",
     "react-router": "4.2.0",
     "react-router-dom": "4.2.2",
