--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,9 @@
   "plugins": [
     "@babel/transform-runtime",
     "@babel/syntax-dynamic-import",
-    "@babel/proposal-decorators",
+    ["@babel/proposal-decorators", {
+      "legacy": true
+    }],
     "@babel/proposal-class-properties",
     "@babel/proposal-optional-catch-binding",
     "@babel/proposal-do-expressions",
