--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "staged": "node_modules/.bin/lint-staged",
     "precommit": "yarn staged"
   },
+  "devServer": {
+    "port": 1339
+  },
   "ava": {
     "files": [
       "test/**/*.js",
@@ -66,6 +69,7 @@
     "js-yaml": "3.11.0",
     "lint-staged": "7.0.4",
     "lost": "8.2.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "mkdirp": "0.5.1",
     "postcss": "6.0.21",
     "postcss-autoreset": "2.0.2",
@@ -107,7 +111,7 @@
     "graphql": "0.13.2",
     "halogen": "0.2.0",
     "localforage": "1.7.1",
-    "lodash": "4.17.5",
+    "lodash": "4.17.10",
     "lodash-decorators": "5.0.0",
     "mobx": "4.2.0",
     "mobx-preact": "2.0.0",
