--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
       "modules": false,
       "exclude": ["transform-regenerator"],
       "targets": {
-        "browsers": ["last 2 years"]
+        "browsers": ["last 2 years", "not dead"]
       }
     }]
   ],
