--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "js-yaml": "3.11.0",
-    "lint-staged": "^7.0.5",
+    "lint-staged": "7.0.5",
     "lost": "8.2.1",
     "mini-css-extract-plugin": "^0.4.0",
     "mkdirp": "0.5.1",
@@ -92,7 +92,7 @@
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
     "webpack": "4.6.0",
-    "webpack-cli": "2.0.15",
+    "webpack-cli": "2.1.2",
     "webpack-dev-server": "3.1.3"
   },
   "dependencies": {
@@ -124,10 +124,11 @@
     "object-path": "0.11.4",
     "p-reduce": "1.0.0",
     "p-waterfall": "1.0.0",
-    "preact": "8.2.7",
+    "preact": "8.2.9",
     "preact-compat": "3.18.0",
     "preact-slots": "^1.0.0",
     "prop-types": "15.6.1",
+    "query-string": "^6.0.0",
     "react-helmet": "5.2.0",
     "react-lazy-images": "0.9.1",
     "react-loadable": "5.3.1",
