--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "preact-slots": "^1.0.0",
     "prop-types": "15.6.1",
     "query-string": "^6.1.0",
+    "react-autosize-textarea": "^3.0.3",
     "react-helmet": "5.2.0",
     "react-lazy-images": "0.9.1",
     "react-loadable": "5.4.0",
