--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "p-waterfall": "1.0.0",
     "preact": "8.2.9",
     "preact-compat": "3.18.0",
+    "preact-portal": "^1.1.3",
     "preact-slots": "^1.0.0",
     "prop-types": "15.6.1",
     "query-string": "^6.1.0",
