--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "js-yaml": "3.11.0",
     "lint-staged": "7.1.0",
     "lost": "8.2.1",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "0.4.0",
     "mkdirp": "0.5.1",
     "postcss": "6.0.22",
     "postcss-autoreset": "2.0.2",
@@ -108,9 +108,11 @@
     "awaity": "1.0.0",
     "classnames": "2.2.5",
     "date-fns": "2.0.0-alpha.7",
-    "draft-js": "^0.10.5",
+    "draft-js": "0.10.5",
     "graphql": "0.13.2",
     "halogen": "0.2.0",
+    "koa": "2.5.1",
+    "koa-static": "4.0.3",
     "localforage": "1.7.1",
     "lodash": "4.17.10",
     "lodash-decorators": "5.0.0",
@@ -126,11 +128,10 @@
     "p-waterfall": "1.0.0",
     "preact": "8.2.9",
     "preact-compat": "3.18.0",
-    "preact-portal": "^1.1.3",
-    "preact-slots": "^1.0.0",
+    "preact-portal": "1.1.3",
     "prop-types": "15.6.1",
-    "query-string": "^6.1.0",
-    "react-autosize-textarea": "^3.0.3",
+    "query-string": "6.1.0",
+    "react-autosize-textarea": "3.0.3",
     "react-helmet": "5.2.0",
     "react-lazy-images": "0.9.1",
     "react-loadable": "5.4.0",
