--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
+    "babel-preset-minify": "^0.4.3",
     "caniuse-lite": "1.0.30000844",
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
