--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
     "svgo-loader": "2.1.0",
     "webpack": "4.11.1",
     "webpack-cli": "3.0.3",
-    "webpack-dev-server": "3.1.4"
+    "webpack-dev-server": "3.1.4",
+    "webpack-serve": "^1.0.4"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.49",
