--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -22,7 +22,7 @@
     "at-rule-no-unknown": [
       true, {
         "ignoreAtRules": [
-          "lost", "use"
+          "lost", "use", "value"
         ]
       }
     ],
