--- a/package.json
+++ b/package.json
@@ -73,14 +73,11 @@
     "mini-css-extract-plugin": "0.4.0",
     "mkdirp": "0.5.1",
     "postcss": "6.0.22",
-    "postcss-autoreset": "2.0.2",
-    "postcss-cssnext": "3.1.0",
-    "postcss-flexbugs-fixes": "3.3.1",
-    "postcss-font-magician": "2.2.1",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "4.0.0",
+    "postcss-preset-env": "^5.1.0",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "3.0.0",
     "preact-compat-enzyme": "0.2.5",
