--- a/package.json
+++ b/package.json
@@ -48,10 +48,8 @@
     "ava": "0.25.0",
     "babel-eslint": "8.2.3",
     "babel-loader": "8.0.0-beta.2",
-    "babel-minify-webpack-plugin": "0.3.1",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "babel-preset-minify": "^0.4.3",
     "caniuse-lite": "1.0.30000849",
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
@@ -76,11 +74,12 @@
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
     "postcss-nested": "3.0.0",
-    "postcss-normalize": "4.0.0",
-    "postcss-preset-env": "^5.1.0",
+    "postcss-normalize": "^5.0.0",
+    "postcss-preset-env": "5.1.0",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "3.0.0",
     "preact-compat-enzyme": "0.2.5",
+    "react-hot-loader": "4.3.1",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
     "style-loader": "0.21.0",
@@ -89,10 +88,10 @@
     "sugarss": "1.0.1",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
+    "uglifyjs-webpack-plugin": "1.2.5",
     "webpack": "4.11.1",
     "webpack-cli": "3.0.3",
-    "webpack-dev-server": "3.1.4",
-    "webpack-serve": "^1.0.4"
+    "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.49",
@@ -136,7 +135,7 @@
     "react-loadable": "5.4.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-spinners": "^0.3.2",
+    "react-spinners": "0.3.2",
     "whatwg-fetch": "2.0.4"
   }
 }
