--- a/package.json
+++ b/package.json
@@ -29,28 +29,28 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.49",
-    "@babel/core": "7.0.0-beta.49",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.49",
-    "@babel/plugin-proposal-decorators": "7.0.0-beta.49",
-    "@babel/plugin-proposal-do-expressions": "7.0.0-beta.49",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.49",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.49",
-    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.49",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.49",
-    "@babel/plugin-proposal-pipeline-operator": "7.0.0-beta.49",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.49",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.49",
-    "@babel/preset-env": "7.0.0-beta.49",
-    "@babel/preset-react": "7.0.0-beta.49",
+    "@babel/cli": "7.0.0-beta.51",
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/plugin-proposal-class-properties": "7.0.0-beta.51",
+    "@babel/plugin-proposal-decorators": "7.0.0-beta.51",
+    "@babel/plugin-proposal-do-expressions": "7.0.0-beta.51",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.51",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.51",
+    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.51",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.51",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.51",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.51",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.51",
+    "@babel/preset-env": "7.0.0-beta.51",
+    "@babel/preset-react": "7.0.0-beta.51",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "8.6.0",
+    "autoprefixer": "8.6.3",
     "ava": "0.25.0",
     "babel-eslint": "8.2.3",
     "babel-loader": "8.0.0-beta.2",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.13",
-    "caniuse-lite": "1.0.30000849",
+    "caniuse-lite": "1.0.30000856",
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
     "eslint": "4.19.1",
@@ -66,54 +66,54 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "js-yaml": "3.12.0",
-    "lint-staged": "7.1.3",
-    "lost": "8.2.1",
+    "lint-staged": "7.2.0",
+    "lost": "8.3.0",
     "mini-css-extract-plugin": "0.4.0",
     "mkdirp": "0.5.1",
     "postcss": "6.0.22",
     "postcss-import": "11.1.0",
     "postcss-loader": "2.1.5",
     "postcss-nested": "3.0.0",
-    "postcss-normalize": "^5.0.0",
+    "postcss-normalize": "^6.0.0",
     "postcss-preset-env": "5.1.0",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "3.0.0",
     "preact-compat-enzyme": "0.2.5",
-    "react-hot-loader": "4.3.1",
+    "react-hot-loader": "4.3.3",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
     "style-loader": "0.21.0",
-    "stylelint": "9.2.1",
+    "stylelint": "9.3.0",
     "stylelint-config-recommended": "2.1.0",
     "sugarss": "1.0.1",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
     "uglifyjs-webpack-plugin": "1.2.5",
-    "webpack": "4.11.1",
-    "webpack-cli": "3.0.3",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.8",
     "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.49",
+    "@babel/runtime": "7.0.0-beta.51",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "1.3.3",
-    "apollo-cache-inmemory": "1.2.2",
-    "apollo-client": "2.3.2",
+    "apollo-cache-inmemory": "1.2.5",
+    "apollo-client": "2.3.5",
     "apollo-link": "1.2.2",
     "apollo-link-context": "1.0.8",
-    "apollo-link-error": "1.0.9",
+    "apollo-link-error": "1.1.0",
     "awaity": "1.0.0",
-    "classnames": "2.2.5",
+    "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.7",
     "draft-js": "0.10.5",
     "graphql": "0.13.2",
     "halogen": "0.2.0",
     "koa": "2.5.1",
-    "koa-static": "4.0.3",
-    "localforage": "1.7.1",
+    "koa-static": "5.0.0",
+    "localforage": "1.7.2",
     "lodash": "4.17.10",
-    "lodash-decorators": "5.0.1",
+    "lodash-decorators": "6.0.0",
     "mobx": "4.3.1",
     "mobx-preact": "2.0.0",
     "mobx-state-tree": "2.0.5",
@@ -127,9 +127,9 @@
     "preact": "8.2.9",
     "preact-compat": "3.18.0",
     "preact-portal": "1.1.3",
-    "prop-types": "15.6.1",
+    "prop-types": "15.6.2",
     "query-string": "6.1.0",
-    "react-autosize-textarea": "3.0.3",
+    "react-autosize-textarea": "4.0.0",
     "react-helmet": "5.2.0",
     "react-lazy-images": "0.9.1",
     "react-loadable": "5.4.0",
