--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "3.0.0",
     "preact-compat-enzyme": "0.2.5",
-    "react-hot-loader": "4.3.3",
+    "react-hot-loader": "^4.3.4",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
     "style-loader": "0.21.0",
@@ -116,7 +116,7 @@
     "lodash": "4.17.10",
     "lodash-decorators": "6.0.0",
     "mobx": "5.0.3",
-    "mobx-preact": "3.0.0",
+    "mobx-react": "^5.2.3",
     "mobx-state-tree": "3.0.0",
     "ms": "2.1.1",
     "nanoid": "1.1.0",
@@ -125,12 +125,11 @@
     "object-path": "0.11.4",
     "p-reduce": "1.0.0",
     "p-waterfall": "1.0.0",
-    "preact": "8.2.9",
-    "preact-compat": "3.18.0",
-    "preact-portal": "1.1.3",
     "prop-types": "15.6.2",
     "query-string": "6.1.0",
+    "react": "^16.4.1",
     "react-autosize-textarea": "4.0.0",
+    "react-dom": "^16.4.1",
     "react-helmet": "5.2.0",
     "react-lazy-images": "1.0.0",
     "react-loadable": "5.4.0",
