--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,6 @@ yarn-error.log
 
 /static/assets/js/**/*.js
 /static/assets/css/**/*.css
-/static/view/**
 /test
 /core
 /module
@@ -16,3 +15,4 @@ yarn-error.log
 !/config/**/default.yaml
 !/config/**/default.yml
 stats.json
+static/index.html
