--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "1.3.3",
-    "apollo-cache-inmemory": "1.3.0-beta.6",
+    "apollo-cache-inmemory": "1.2.6",
     "apollo-client": "2.3.7",
     "apollo-link": "1.2.2",
     "apollo-link-context": "1.0.8",
