--- a/package.json
+++ b/package.json
@@ -26,99 +26,98 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-do-expressions": "7.5.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
-    "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-partial-application": "7.4.4",
-    "@babel/plugin-proposal-pipeline-operator": "7.5.0",
-    "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "@babel/preset-react": "7.0.0",
-    "@octetstream/eslint-config": "3.1.0",
-    "@svgr/webpack": "4.3.3",
-    "autoprefixer": "9.6.1",
-    "ava": "2.2.0",
-    "babel-eslint": "10.0.2",
+    "@babel/cli": "7.7.7",
+    "@babel/core": "7.7.7",
+    "@babel/plugin-proposal-class-properties": "7.7.4",
+    "@babel/plugin-proposal-decorators": "7.7.4",
+    "@babel/plugin-proposal-do-expressions": "7.7.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.7.7",
+    "@babel/plugin-proposal-optional-catch-binding": "7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "7.7.5",
+    "@babel/plugin-proposal-partial-application": "7.7.4",
+    "@babel/plugin-proposal-pipeline-operator": "7.7.7",
+    "@babel/plugin-syntax-dynamic-import": "7.7.4",
+    "@babel/plugin-transform-runtime": "7.7.6",
+    "@babel/preset-env": "7.7.7",
+    "@babel/preset-react": "7.7.4",
+    "@octetstream/eslint-config": "4.0.0",
+    "@svgr/webpack": "5.0.0",
+    "autoprefixer": "9.7.3",
+    "ava": "2.4.0",
+    "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
-    "babel-plugin-module-resolver": "3.2.0",
+    "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "caniuse-lite": "1.0.30000989",
-    "css-loader": "3.2.0",
+    "caniuse-lite": "1.0.30001017",
+    "css-loader": "3.4.0",
     "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
-    "enzyme": "3.10.0",
-    "eslint": "6.1.0",
-    "eslint-config-airbnb": "18.0.0",
+    "enzyme": "3.11.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.0.1",
     "eslint-import-resolver-babel-module": "5.1.0",
-    "eslint-plugin-ava": "7.1.0",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-ava": "9.0.0",
+    "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react": "7.17.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "favicons-webpack-plugin": "0.0.9",
+    "favicons-webpack-plugin": "2.0.0",
     "graphql-tag": "2.10.1",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "3.0.3",
+    "husky": "3.1.0",
     "js-yaml": "3.13.1",
-    "lint-staged": "9.2.1",
+    "lint-staged": "9.5.0",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "0.9.0",
     "mkdirp": "0.5.1",
-    "postcss": "7.0.17",
-    "postcss-font-magician": "2.3.0",
+    "postcss": "7.0.25",
+    "postcss-font-magician": "2.3.1",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
-    "postcss-nested": "4.1.2",
+    "postcss-nested": "4.2.1",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-property-lookup": "2.0.0",
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.2",
     "postcss-use": "3.0.0",
-    "react-dev-utils": "9.1.0",
-    "react-dropzone": "10.1.7",
-    "react-hot-loader": "4.12.10",
+    "react-dev-utils": "^10.0.0",
+    "react-dropzone": "10.2.1",
+    "react-hot-loader": "4.12.18",
     "react-svg-loader": "3.0.3",
-    "rimraf": "2.6.3",
+    "rimraf": "3.0.0",
     "serve": "11.2.0",
-    "style-loader": "1.0.0",
-    "stylelint": "10.1.0",
-    "stylelint-config-recommended": "2.2.0",
-    "svgo": "1.3.0",
+    "style-loader": "1.1.2",
+    "stylelint": "12.0.1",
+    "stylelint-config-recommended": "3.0.0",
+    "svgo": "1.3.2",
     "svgo-loader": "2.2.1",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "2.3.1",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.39.1",
-    "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.8.0"
+    "webpack": "4.41.5",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.10.1"
   },
   "dependencies": {
-    "@babel/runtime": "7.7.4",
-    "@casl/ability": "3.2.0",
+    "@babel/runtime": "7.7.7",
+    "@casl/ability": "3.4.0",
     "@casl/react": "1.0.4",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
     "@octetstream/object-to-form-data": "1.1.0",
     "@octetstream/promisify": "2.0.2",
-    "apollo-cache-inmemory": "1.6.3",
-    "apollo-client": "2.6.4",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
     "apollo-link": "1.2.13",
     "apollo-link-context": "1.0.19",
     "apollo-link-error": "1.1.12",
     "apollo-link-form-data": "1.1.0",
-    "awaity": "1.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.8.1",
     "decss": "0.8.0",
-    "draft-js": "0.11.2",
+    "draft-js": "0.11.3",
     "graphql": "14.5.8",
     "js-flock": "3.12.0",
     "koa": "2.11.0",
@@ -126,11 +125,11 @@
     "localforage": "1.7.3",
     "lodash": "4.17.15",
     "lodash-decorators": "6.0.1",
-    "mobx": "5.15.0",
+    "mobx": "5.15.1",
     "mobx-react": "6.1.4",
     "mobx-state-tree": "3.15.0",
     "ms": "2.1.2",
-    "nanoid": "2.1.7",
+    "nanoid": "2.1.8",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.7.2",
@@ -143,7 +142,7 @@
     "react-lazy-images": "1.1.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-spinners": "0.6.1",
+    "react-spinners": "0.7.2",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "7.1.0"
