--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@babel/plugin-proposal-partial-application": "7.7.4",
     "@babel/plugin-proposal-pipeline-operator": "7.7.7",
     "@babel/plugin-syntax-dynamic-import": "7.7.4",
-    "@babel/plugin-syntax-import-meta": "^7.8.0",
+    "@babel/plugin-syntax-import-meta": "7.8.0",
     "@babel/plugin-transform-runtime": "7.7.6",
     "@babel/preset-env": "7.7.7",
     "@babel/preset-react": "7.7.4",
@@ -48,6 +48,7 @@
     "ava": "2.4.0",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
+    "babel-plugin-emotion": "10.0.27",
     "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "caniuse-lite": "1.0.30001019",
@@ -62,12 +63,12 @@
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "1.7.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "favicons-webpack-plugin": "3.0.0",
     "graphql-tag": "2.10.1",
     "html-webpack-harddisk-plugin": "1.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.11",
+    "html-webpack-plugin": "4.0.0-beta.11",
     "husky": "4.0.1",
     "js-yaml": "3.13.1",
     "lint-staged": "9.5.0",
@@ -120,7 +121,7 @@
     "date-fns": "2.9.0",
     "decss": "0.8.0",
     "draft-js": "0.11.4",
-    "fast-deep-equal": "^3.1.1",
+    "fast-deep-equal": "3.1.1",
     "graphql": "14.5.8",
     "js-flock": "3.12.0",
     "koa": "2.11.0",
@@ -139,7 +140,7 @@
     "query-string": "6.9.0",
     "react": "16.12.0",
     "react-autosize-textarea": "7.0.0",
-    "react-cache": "^2.0.0-alpha.1",
+    "react-cache": "2.0.0-alpha.1",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.1",
     "react-is": "16.12.0",
@@ -147,7 +148,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-spinners": "0.8.0",
-    "react-use": "^13.14.3",
+    "react-use": "13.14.3",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "8.0.0"
