--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "react-hot-loader": "4.12.18",
     "react-svg-loader": "3.0.3",
     "rimraf": "3.0.0",
-    "serve": "11.3.0",
+    "serve": "^11.3.0",
     "style-loader": "1.1.2",
     "stylelint": "12.0.1",
     "stylelint-config-recommended": "3.0.0",
