--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "make": "NODE_ENV=production node_modules/.bin/webpack --config build",
-    "watch": "NODE_ENV=development node_modules/.bin/webpack-dev-server --config build",
-    "babel:make": "node_modules/.bin/babel src -d .",
-    "babel:watch": "node_modules/.bin/babel src -w -d .",
+    "make": "NODE_ENV=production node build",
+    "watch": "NODE_ENV=development node build",
+    "babel:make": "babel src -d .",
+    "babel:watch": "babel src -w -d .",
     "m": "yarn make",
     "w": "yarn watch",
     "wo": "yarn watch --open",
-    "stats": "node_modules/.bin/mkdirp runtime/webpack && NODE_ENV=production node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
-    "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css static/assets/img/icons static/index.html runtime",
-    "lint:eslint": "node_modules/.bin/eslint --fix src build",
-    "lint:stylelint": "node_modules/.bin/stylelint --fix",
-    "staged": "node_modules/.bin/lint-staged"
+    "stats": "mkdirp runtime/webpack && NODE_ENV=production webpack --config build --profile --json > runtime/webpack/stats.json",
+    "cleanup": "rimraf static/assets/js static/assets/css static/assets/img/icons static/index.html runtime",
+    "lint:eslint": "eslint --fix src build",
+    "lint:stylelint": "stylelint --fix",
+    "staged": "lint-staged"
   },
   "ava": {
     "files": [
@@ -89,7 +89,7 @@
     "react-hot-loader": "4.12.18",
     "react-svg-loader": "3.0.3",
     "rimraf": "3.0.0",
-    "serve": "^11.3.0",
+    "serve": "11.3.0",
     "style-loader": "1.1.3",
     "stylelint": "13.0.0",
     "stylelint-config-recommended": "3.0.0",
