--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "mobx-react-lite": "^1.5.2",
     "mobx-state-tree": "3.15.0",
     "ms": "2.1.2",
-    "nanoid": "2.1.10",
+    "nanoid": "^2.1.10",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.7.2",
