--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "react-cache": "2.0.0-alpha.1",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.1",
+    "react-hook-form": "4.8.2",
     "react-is": "16.12.0",
     "react-lazy-images": "1.1.0",
     "react-router": "5.1.2",
