--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.8.3",
-    "@babel/core": "7.8.3",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.8.4",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-decorators": "7.8.3",
     "@babel/plugin-proposal-do-expressions": "7.8.3",
@@ -37,19 +37,19 @@
     "@babel/plugin-proposal-pipeline-operator": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.8.3",
     "@babel/plugin-transform-runtime": "7.8.3",
-    "@babel/preset-env": "7.8.3",
+    "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
     "@octetstream/eslint-config": "4.0.0",
-    "@open-wc/webpack-import-meta-loader": "^0.4.1",
+    "@open-wc/webpack-import-meta-loader": "^0.4.2",
     "@svgr/webpack": "5.1.0",
     "autoprefixer": "9.7.4",
-    "ava": "3.1.0",
+    "ava": "3.2.0",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-emotion": "10.0.27",
     "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "caniuse-lite": "1.0.30001023",
+    "caniuse-lite": "1.0.30001025",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
@@ -57,19 +57,19 @@
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-import-resolver-babel-module": "5.1.2",
-    "eslint-plugin-ava": "10.0.0",
-    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-ava": "10.0.1",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.18.0",
+    "eslint-plugin-react": "7.18.3",
     "eslint-plugin-react-hooks": "2.3.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "favicons-webpack-plugin": "3.0.0",
-    "graphql-tag": "2.10.1",
+    "favicons-webpack-plugin": "3.0.1",
+    "graphql-tag": "2.10.3",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "husky": "4.2.1",
     "js-yaml": "3.13.1",
-    "lint-staged": "10.0.3",
+    "lint-staged": "10.0.7",
     "lost": "8.3.1",
     "mini-css-extract-plugin": "0.9.0",
     "mkdirp": "1.0.3",
@@ -84,7 +84,7 @@
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.2",
     "postcss-use": "3.0.0",
-    "react-dev-utils": "10.0.0",
+    "react-dev-utils": "10.1.0",
     "react-dropzone": "10.2.1",
     "react-hot-loader": "4.12.19",
     "react-svg-loader": "3.0.3",
@@ -95,14 +95,14 @@
     "stylelint-config-recommended": "3.0.0",
     "svgo": "1.3.2",
     "svgo-loader": "2.2.1",
-    "terser-webpack-plugin": "2.3.3",
+    "terser-webpack-plugin": "2.3.4",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.10.1"
+    "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
-    "@babel/runtime": "7.8.3",
+    "@babel/runtime": "7.8.4",
     "@casl/ability": "3.4.0",
     "@casl/react": "1.0.4",
     "@hot-loader/react-dom": "npm:react-dom",
@@ -127,11 +127,11 @@
     "lodash": "4.17.15",
     "lodash-decorators": "6.0.1",
     "mobx": "5.15.4",
-    "mobx-react": "6.1.5",
+    "mobx-react": "6.1.7",
     "mobx-react-lite": "^1.5.2",
     "mobx-state-tree": "3.15.0",
     "ms": "2.1.2",
-    "nanoid": "^2.1.10",
+    "nanoid": "^2.1.11",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.7.2",
@@ -147,8 +147,9 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-spinners": "0.8.0",
-    "react-use": "13.22.3",
+    "react-use": "13.24.0",
     "use-events": "^1.4.1",
+    "use-suspender": "^0.1.0",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "8.0.0"
