--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
     "@octetstream/eslint-config": "4.0.0",
-    "@open-wc/webpack-import-meta-loader": "^0.4.2",
+    "@open-wc/webpack-import-meta-loader": "^0.4.3",
     "@svgr/webpack": "5.1.0",
     "autoprefixer": "9.7.4",
-    "ava": "3.2.0",
+    "ava": "3.3.0",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "babel-plugin-emotion": "10.0.27",
     "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "caniuse-lite": "1.0.30001025",
+    "caniuse-lite": "1.0.30001027",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
@@ -88,17 +88,17 @@
     "react-dropzone": "10.2.1",
     "react-hot-loader": "4.12.19",
     "react-svg-loader": "3.0.3",
-    "rimraf": "3.0.1",
+    "rimraf": "3.0.2",
     "serve": "11.3.0",
     "style-loader": "1.1.3",
-    "stylelint": "13.0.0",
+    "stylelint": "13.1.0",
     "stylelint-config-recommended": "3.0.0",
     "svgo": "1.3.2",
     "svgo-loader": "2.2.1",
     "terser-webpack-plugin": "2.3.4",
     "uglifyjs-webpack-plugin": "2.2.0",
-    "webpack": "4.41.5",
-    "webpack-cli": "3.3.10",
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11",
     "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
@@ -141,7 +141,7 @@
     "react-cache": "2.0.0-alpha.1",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.1",
-    "react-hook-form": "4.8.2",
+    "react-hook-form": "4.9.3",
     "react-is": "16.12.0",
     "react-lazy-images": "1.1.0",
     "react-router": "5.1.2",
@@ -149,9 +149,10 @@
     "react-spinners": "0.8.0",
     "react-use": "13.24.0",
     "use-events": "^1.4.1",
-    "use-suspender": "^0.1.0",
+    "use-suspender": "^0.2.0",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
-    "whatwg-url": "8.0.0"
+    "whatwg-url": "8.0.0",
+    "yup": "^0.28.1"
   }
 }
