--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
     "@octetstream/eslint-config": "4.0.0",
-    "@open-wc/webpack-import-meta-loader": "^0.4.3",
+    "@open-wc/webpack-import-meta-loader": "0.4.3",
     "@svgr/webpack": "5.1.0",
     "autoprefixer": "9.7.4",
     "ava": "3.3.0",
@@ -74,7 +74,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "mkdirp": "1.0.3",
     "postcss": "7.0.26",
-    "postcss-font-magician": "^2.3.1",
+    "postcss-font-magician": "2.3.1",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.2.1",
@@ -128,10 +128,11 @@
     "lodash-decorators": "6.0.1",
     "mobx": "5.15.4",
     "mobx-react": "6.1.8",
-    "mobx-react-lite": "^1.5.2",
+    "mobx-react-lite": "1.5.2",
     "mobx-state-tree": "3.15.0",
     "ms": "2.1.2",
-    "nanoid": "^2.1.11",
+    "mst-middlewares": "3.15.0",
+    "nanoid": "2.1.11",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.7.2",
@@ -148,11 +149,11 @@
     "react-router-dom": "5.1.2",
     "react-spinners": "0.8.0",
     "react-use": "13.24.0",
-    "use-events": "^1.4.1",
-    "use-suspender": "^0.3.0",
+    "use-events": "1.4.1",
+    "use-suspender": "0.3.0",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "8.0.0",
-    "yup": "^0.28.1"
+    "yup": "0.28.1"
   }
 }
