--- a/package.json
+++ b/package.json
@@ -105,6 +105,9 @@
     "@babel/runtime": "7.8.7",
     "@casl/ability": "3.4.0",
     "@casl/react": "1.0.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
     "@octetstream/object-to-form-data": "1.1.0",
@@ -139,7 +142,6 @@
     "query-string": "6.11.1",
     "react": "16.13.0",
     "react-autosize-textarea": "7.0.0",
-    "react-cache": "2.0.0-alpha.1",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.1",
     "react-hook-form": "5.0.3",
