--- a/package.json
+++ b/package.json
@@ -49,13 +49,13 @@
     "babel-plugin-emotion": "10.0.29",
     "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "caniuse-lite": "1.0.30001033",
+    "caniuse-lite": "1.0.30001035",
     "css-loader": "3.4.2",
     "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
     "enzyme": "3.11.0",
     "eslint": "6.8.0",
-    "eslint-config-airbnb": "18.0.1",
+    "eslint-config-airbnb": "18.1.0",
     "eslint-import-resolver-babel-module": "5.1.2",
     "eslint-plugin-ava": "10.2.0",
     "eslint-plugin-import": "2.20.1",
@@ -86,7 +86,7 @@
     "postcss-use": "3.0.0",
     "react-dev-utils": "10.2.0",
     "react-dropzone": "10.2.1",
-    "react-hot-loader": "4.12.19",
+    "react-hot-loader": "4.12.20",
     "react-svg-loader": "3.0.3",
     "rimraf": "3.0.2",
     "serve": "11.3.0",
@@ -105,9 +105,9 @@
     "@babel/runtime": "7.8.7",
     "@casl/ability": "3.4.0",
     "@casl/react": "1.0.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@fortawesome/fontawesome-svg-core": "1.2.27",
+    "@fortawesome/free-solid-svg-icons": "5.12.1",
+    "@fortawesome/react-fontawesome": "0.1.9",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
     "@octetstream/object-to-form-data": "1.1.0",
@@ -119,7 +119,7 @@
     "apollo-link-error": "1.1.12",
     "apollo-link-form-data": "1.1.0",
     "classnames": "2.2.6",
-    "date-fns": "2.10.0",
+    "date-fns": "2.11.0",
     "decss": "0.8.0",
     "draft-js": "0.11.4",
     "graphql": "14.6.0",
