--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,25 +4,14 @@
     "property-no-unknown": [
       true, {
         "ignoreProperties": [
-          "lost-align",
-          "lost-center",
-          "lost-column",
-          "lost-flex-container",
-          "lost-masonry-column",
-          "lost-masonry-wrap",
-          "lost-move",
-          "lost-offset",
-          "lost-row",
-          "lost-unit",
-          "lost-utility",
-          "lost-waffle"
+          "composes"
         ]
       }
     ],
     "at-rule-no-unknown": [
       true, {
         "ignoreAtRules": [
-          "lost", "use", "value", "import-normalize"
+          "use", "value", "import-normalize"
         ]
       }
     ],
